Sat Jun  6 17:07:19.73    Andrew Lanoix <alanoix@umich.edu>

	* src/inetaddr.c (gnet_inetaddr_new_list_async_cb): 
		&state->ias->data should be state->ias->data.
	* src/tcp.c (gnet_tcp_socket_new_async_direct)
		Do not call back on a failure in GNet 2.0.
		Both issues found by Hans Petter Jansson <hpj@ximian.com>.

Tue Jun  3 12:11:44 2003  David Helder  <dhelder@umich.edu>

	* AUTHORS: Change my email address


	* tests/unpack_test.c (main): Add 64 bit tests.
	* tests/unpack_test.c (main): Use sizeof's for size.
	* tests/unpack_test.c (main): Use lg*int where we were using
	   ig*int.

	* tests/pack_test.c (test_bytes): Skip the first half
	   of 64-bit answers.  (We store the correct value as
	   32 bits.)

	* src/pack.c (gnet_vpack): Longs should get long off of stack, not
	   int.
	* src/pack.c (gnet_vcalcsize): " (not that it matters for this func.)

	* tests/pack_test.c (main): long tests need buffer sizeof(long).
	   (and use sizeof(unsigned int) for unsigned int tests.
	
Sat May 31 12:47:45.57 2003 Andrew Lanoix <alanoix@umich.edu>

	* src/makefile.mingw: Update for 2.0
	* examples/makefile.mingw: "
	* tests/makefile.mingw: "
	* gnet.def: "

Tue May 20 21:03:15 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Don't check for -lpthread or -lc_r if
	    -pthread or -pthreads worked.

	* src/inetaddr.c (inet_ntop): Make buf const.

Wed May 14 00:48:22 2003  David Helder  <dhelder@umich.edu>

	* configure.ac: Update version (unreleased)

	* src/tcp.c (gnet_tcp_socket_server_accept): cast to 
	   struct sockaddr (Win32)
	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): " 

Tue May 13 23:54:59 2003  David Helder  <dhelder@umich.edu>

	* src/gnet-private.h (in_addr_t): define for win32. (guint32)

	* src/inetaddr.c (gnet_inetaddr_unref): ref_count--, not
	   ++ (thanks Pierre-Emmanuel Gros).  :-\

Tue May 13 22:31:19 2003  David Helder  <dhelder@umich.edu>

	* NEWS: 2.0.3
	* configure.ac (GNET_BINARY_AGE): "
